--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -17,7 +17,7 @@
         <!-- --------------- HEADER --------------- -->
         <nav id="header">
             <div class="nav-logo">
-                <p class="nav-name">Doe</p>
+                <p class="nav-name">Muthami</p>
                 <span>.</span>
             </div>
             <div class="nav-menu" id="myNavMenu">
@@ -53,7 +53,7 @@
             <section class="featured-box" id="home">
                 <div class="featured-text">
                     <div class="featured-text-card">
-                        <span>John Doe</span>
+                        <span> Kevin Muthami</span>
                     </div>
                     <div class="featured-name">
                         <p>I'm <span class="typedText"></span></p>
@@ -70,13 +70,12 @@
                     <div class="social_icons">
                         <div class="icon"><i class="uil uil-instagram"></i></div>
                         <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                        <div class="icon"><i class="uil uil-twitter"></i></div>
                         <div class="icon"><i class="uil uil-github-alt"></i></div>
                     </div>
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="https://raw.githubusercontent.com/tilakjain123/Portfolio/main/01/profile.png" alt="avatar">
+                        <img src="DSC_1202.jpg" alt="avatar">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
