--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -18,7 +18,7 @@
         <nav id="header">
             <div class="nav-logo">
                 <p class="nav-name">Muthami</p>
-                <span>.</span>
+            
             </div>
             <div class="nav-menu" id="myNavMenu">
                 <ul class="nav_menu_list">
@@ -41,7 +41,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+                <button id = "download-btn", class="btn">Download CV <i class="uil uil-file-alt"></i></button>
             </div>
             <div class="nav-menu-btn">
                 <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="social_icons">
                         <div class="icon"><i class="uil uil-instagram"></i></div>
-                        <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+                        <div class="icon"><i class="uil uil-linkedin-alt"></i></di
                         <div class="icon"><i class="uil uil-github-alt"></i></div>
                     </div>
                 </div>
