--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -53,23 +53,23 @@
             <section class="featured-box" id="home">
                 <div class="featured-text">
                     <div class="featured-text-card">
-                        <span> Kevin Muthami</span>
+                        <span>Hello </span>
                     </div>
                     <div class="featured-name">
-                        <p>I'm <span class="typedText"></span></p>
+                        <p>I'm  Kevin Muthami <span class="typedText"></span></p>
                     </div>
                     <div class="featured-text-info">
                         <p>Experienced frontend developer with a passion for creating visually stunning
-                            and user-friendly websites.
+                            and user-frienly websites.
                         </p>
                     </div>
                     <div class="featured-text-btn">
                         <button class="btn blue-btn">Hire Me</button>
-                        <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+                        <a href="Resume.docx" download class="btn btn--download">Download cv</a>
                     </div>
                     <div class="social_icons">
                         <div class="icon"><i class="uil uil-instagram"></i></div>
-                        <div class="icon"><i class="uil uil-linkedin-alt"></i></di
+                        <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
                         <div class="icon"><i class="uil uil-github-alt"></i></div>
                     </div>
                 </div>
