--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -40,12 +40,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="nav-button">
-                <button id = "download-btn", class="btn">Download CV <i class="uil uil-file-alt"></i></button>
-            </div>
-            <div class="nav-menu-btn">
-                <i class="uil uil-bars" onclick="myMenuFunction()"></i>
-            </div>
+            
         </nav>
         <!-- -------------- MAIN ---------------- -->
         <main class="wrapper">
@@ -60,14 +55,15 @@
                     </div>
                     <div class="featured-text-info">
                         <p>Experienced frontend developer with a passion for creating visually stunning
-                            and user-frienly websites.
+                            and user-friendly websites.
                         </p>
                     </div>
                     <div class="featured-text-btn">
-                        <button class="btn blue-btn">Hire Me</button>
+                    
                         <a href="Resume.docx" download class="btn btn--download">Download cv</a>
                     </div>
                     <div class="social_icons">
+                        <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Freepik - Flaticon</a>
                         <div class="icon"><i class="uil uil-instagram"></i></div>
                         <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
                         <div class="icon"><i class="uil uil-github-alt"></i></div>
