--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -100,7 +100,6 @@
                             <div class="skills-list">
                                 <span>HTML</span>
                                 <span>CSS</span>
-                                <span>Bootstrap</span>
                                 <span>JavaScript</span>
                                 <span>React</span>
                                
@@ -162,8 +161,8 @@
                     <div class="col">
                         <div class="contact-info">
                             <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: john@doe.com</p>
-                            <p><i class="uil uil-phone"></i> +91 70822 00001</p>
+                            <p><i class="uil uil-envelope"></i> Email: muthamikevin80@gmail.com</p>
+                            <p><i class="uil uil-phone"></i> Phone: +254798115361</p>
                         </div>
                     </div>
                     <div class="col">
