--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -204,13 +204,13 @@
                 </ul>
             </div>
             <div class="footer-social-icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
-                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><i class="uil uil-twitter"></i></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <div class="icon"><a href=https://www.instagram.com/_k.ev.o?igsh> <i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href= https://www.linkedin.com/in/kevin-muthami-052a4a216><i class="uil uil-linkedin-alt"></i></a></div>
+                <div class="icon"><a href=https://github.com/MuthamiKN><i class="uil uil-github-alt"></i></a></div>
+            </div>
             </div>
             <div class="bottom-footer">
-                <p>Copyright © <a href="#home" style="text-decoration: none;">John Doe</a> - All rights reserved
+                <p>Copyright © <a href="#home" style="text-decoration: none;"> Kevin Muthami</a> - All rights reserved
                 </p>
             </div>
         </footer>
