--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -161,23 +161,20 @@
                     <div class="col">
                         <div class="contact-info">
                             <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: muthamikevin80@gmail.com</p>
-                            <p><i class="uil uil-phone"></i> Phone: +254798115361</p>
+                            <p><a href="mailto:muthamikevin80@gmail.com"><i class="uil uil-envelope"></i> Email: muthamikevin80@gmail.com</a></p>
+                            <p><a href="tel:+254798115361"><i class="uil uil-phone"></i> Phone: +254798115361</a></p>
+                            <div class="social_icons">
+                                <div class="icon"><a href=https://www.instagram.com/_k.ev.o?igsh> <i class="uil uil-instagram"></i></a></div>
+                                <div class="icon"><a href= https://www.linkedin.com/in/kevin-muthami-052a4a216><i class="uil uil-linkedin-alt"></i></a></div>
+                                <div class="icon"><a href=https://github.com/MuthamiKN><i class="uil uil-github-alt"></i></a></div>
+                            </div>
                         </div>
+                        
                     </div>
-                    <div class="col">
-                        <div class="form-control">
-                            <div class="form-inputs">
-                                <input type="text" class="input-field" placeholder="Name">
-                                <input type="text" class="input-field" placeholder="Email">
-                            </div>
-                            <div class="text-area">
-                                <textarea placeholder="Message"></textarea>
-                            </div>
-                            <div class="form-button">
-                                <button class="btn">Send <i class="uil uil-message"></i></button>
-                            </div>
-                        </div>
+                    <div class="social_icons">
+                        <div class="icon"><a href=https://www.instagram.com/_k.ev.o?igsh> <i class="uil uil-instagram"></i></a></div>
+                        <div class="icon"><a href= https://www.linkedin.com/in/kevin-muthami-052a4a216><i class="uil uil-linkedin-alt"></i></a></div>
+                        <div class="icon"><a href=https://github.com/MuthamiKN><i class="uil uil-github-alt"></i></a></div>
                     </div>
                 </div>
             </section>
@@ -185,7 +182,7 @@
         <!-- --------------- FOOTER --------------- -->
         <footer>
             <div class="top-footer">
-                <p>John Doe .</p>
+                <p> Kevin Muthami.</p>
             </div>
             <div class="middle-footer">
                 <ul class="footer-menu">
