--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -47,15 +47,19 @@
             <!-- -------------- FEATURED BOX ---------------- -->
             <section class="featured-box" id="home">
                 <div class="featured-text">
-                    <div class="featured-text-card">
-                        <span>Hello </span>
-                    </div>
+                    
                     <div class="featured-name">
                         <p>I'm  Kevin Muthami <span class="typedText"></span></p>
                     </div>
                     <div class="featured-text-info">
-                        <p>Experienced frontend developer with a passion for creating visually stunning
-                            and user-friendly websites.
+                        <p>
+                            I'm a talented full stack developer with a strong passion for backend development. 
+                            With a deep understanding of server-side technologies and framework.
+                            I specializes in architecting robust and scalable backend systems.
+                            From designing databases to implementing complex business logic, 
+                            I excels in crafting efficient solutions that power the core functionality of web applications.
+                            With a keen eye for optimization and a commitment to delivering high-quality code.
+                            I'm always eager to tackle new challenges and push the boundaries of backend development.
                         </p>
                     </div>
                     <div class="featured-text-btn">
