--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -87,10 +87,13 @@
                     <div class="col">
                         <div class="about-info">
                             <h3>My introduction</h3>
-                            <p>I am well-versed in HTML, CSS and JavaScript , and other cutting edge
-                                frameworks and libraries,which allows me to implement interactive features.
-                                Additionally, I have experirence working with content management systems (CMS) like
-                                WordPress.
+                            <p>I'm a talented full stack developer with a strong passion for backend development. 
+                                With a deep understanding of server-side technologies and framework.
+                                I specializes in architecting robust and scalable backend systems.
+                                From designing databases to implementing complex business logic, 
+                                I excels in crafting efficient solutions that power the core functionality of web applications.
+                                With a keen eye for optimization and a commitment to delivering high-quality code.
+                                I'm always eager to tackle new challenges and push the boundaries of backend development.
                             </p>
             
                         </div>
