--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -57,13 +57,10 @@
                     </div>
                     <div class="featured-text-info">
                         <p>
-                            I'm a talented full stack developer with a strong passion for backend development. 
-                            With a deep understanding of server-side technologies and framework.
-                            I specializes in architecting robust and scalable backend systems.
-                            From designing databases to implementing complex business logic, 
-                            I excels in crafting efficient solutions that power the core functionality of web applications.
-                            With a keen eye for optimization and a commitment to delivering high-quality code.
-                            I'm always eager to tackle new challenges and push the boundaries of backend development.
+                        I'm an aspiring fullstack developer. 
+                        I'm interested in solving real world problems using tech.
+                        Always ready to solve problems and learn new things
+            
                         </p>
                     </div>
                     <div class="featured-text-btn">
