--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -46,7 +46,9 @@
                             <div class="circle"></div>
                         </li>              
                     </ul>
-                    <img src="moon.png" id ="icon">  
+                    <button>
+                        <img src="moon.png" id ="icon">
+                     </button> 
                 
             </div>
             
