--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -88,28 +88,31 @@
                 </div>
                
                 <div class="about-info">
-                    <button class="learn-more">
+                    <div class="button-container">
+                    <button onclick="revealMessage(1)", class="learn-more">
                         <span class="circle" aria-hidden="true">
                         <span class="icon arrow"></span>
                         </span>
                         <span class="button-text">About me </span>
+                        <p id="message1" class="message">This is the message for Button 1.</p>
                       </button>
 
-
-                    <button class="learn-more">
+                    <button onclick="revealMessage(2)", class="learn-more">
                         <span class="circle" aria-hidden="true">
                         <span class="icon arrow"></span>
                         </span>
-                        <span class="button-text">Mission </span>
+                        <span class="button-text">About me </span>
+                        <p id="message2" class="message">This is the message for Button 1.</p>
                       </button>
-
-
-                    <button class="learn-more">
+                    <!-- <button onclick="revealMessage(1)", class="learn-more">
                         <span class="circle" aria-hidden="true">
                         <span class="icon arrow"></span>
                         </span>
-                        <span class="button-text">Vision </span>
-                      </button>
+                        <span class="button-text">About me </span>
+                        <p id="message1" class="message">This is the message for Button 1.</p>
+                      </button> -->
+
+
     
                 </div>
 
