--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -168,8 +168,8 @@
                           <span>Cryptocurrency</span>
                           <p class="text price">1.654,34€</p>
                         </div>
-                      </div>
-                      <div class="card">
+                    </div>
+                    <div class="card1">
                         <svg class="img" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="100%" height="100%" version="1.1" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 784.37 1277.39" xmlns:xlink="http://www.w3.org/1999/xlink">
                        <g id="Layer_x0020_1">
                         <metadata id="CorelCorpID_0Corel-Layer"></metadata>
@@ -190,8 +190,8 @@
                           <span>Cryptocurrency</span>
                           <p class="text price">1.654,34€</p>
                         </div>
-                      </div>
-                      <div class="card">
+                    </div>
+                    <div class="card">
                         <svg class="img" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="100%" height="100%" version="1.1" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 784.37 1277.39" xmlns:xlink="http://www.w3.org/1999/xlink">
                        <g id="Layer_x0020_1">
                         <metadata id="CorelCorpID_0Corel-Layer"></metadata>
@@ -212,8 +212,8 @@
                           <span>Cryptocurrency</span>
                           <p class="text price">1.654,34€</p>
                         </div>
-                      </div>
-                      <div class="card">
+                    </div>
+                    <div class="card">
                         <svg class="img" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="100%" height="100%" version="1.1" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 784.37 1277.39" xmlns:xlink="http://www.w3.org/1999/xlink">
                        <g id="Layer_x0020_1">
                         <metadata id="CorelCorpID_0Corel-Layer"></metadata>
@@ -234,8 +234,8 @@
                           <span>Cryptocurrency</span>
                           <p class="text price">1.654,34€</p>
                         </div>
-                      </div>
-                      <div class="card">
+                    </div>
+                    <div class="card">
                         <svg class="img" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="100%" height="100%" version="1.1" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 784.37 1277.39" xmlns:xlink="http://www.w3.org/1999/xlink">
                        <g id="Layer_x0020_1">
                         <metadata id="CorelCorpID_0Corel-Layer"></metadata>
@@ -256,7 +256,7 @@
                           <span>Cryptocurrency</span>
                           <p class="text price">1.654,34€</p>
                         </div>
-                      </div>
+                    </div>
                       
                 </div>
                
