--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="featured-text-info">
                         <p>
-                        I'm an aspiring fullstack developer. 
+                        I'm an aspiring Software developer. 
                         I'm interested in solving real world problems using tech.
                         Always ready to solve problems and learn new things
             
