--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -90,12 +90,13 @@
                   <div class="infotop">
                   
     
-                  <div class="name"> About Me <br>
+                  <div class="name"> 
+                    <h2>About Me</h2>
                     <p class="aboutme">
                         I'm a talented full stack developer with a strong passion for backend development. 
-                         With a deep understanding of server-side technologies and framework.
+                         With a deep understanding of server-side technologies and framework.<br>
                          I specializes in architecting robust and scalable backend systems.
-                         From designing databases to implementing complex business logic, 
+                         From designing databases to implementing complex business logic, <br>
                          I excels in crafting efficient solutions that power the core functionality of web applications.
                          With a keen eye for optimization and a commitment to delivering high-quality code.
                          I'm always eager to tackle new challenges and push the boundaries of backend development.
