--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -99,8 +99,11 @@
                          From designing databases to implementing complex business logic, <br>
                          I excels in crafting efficient solutions that power the core functionality of web applications.
                          With a keen eye for optimization and a commitment to delivering high-quality code.
-                         I'm always eager to tackle new challenges and push the boundaries of backend development.
+                         I'm always eager to tackle new challenges.
                        </p>
+
+                       <h2>Mission</h2>
+                       <p class="aboutme">To leverage cutting-edge technology and innovative solutions to develop software that empowers users, enhances efficiency, and enriches experiences. By embracing creativity, collaboration, and continuous learning, I strive to engineer robust, user-centric software that addresses complex challenges, drives business growth, and fosters positive societal impact</p>
                     </div>
                     </div>
                   </div>
