--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -102,14 +102,14 @@
                          I'm always eager to tackle new challenges.
                        </p>
 
-                       <h2>Mission</h2>
+                       <h2 class="heading" >Mission</h2>
                        <p class="aboutme">To leverage cutting-edge technology and innovative solutions to develop software that empowers users, enhances efficiency, and enriches experiences. By embracing creativity, collaboration, and continuous learning, I strive to engineer robust, user-centric software that addresses complex challenges, drives business growth, and fosters positive societal impact</p>
                     </div>
                     </div>
                   </div>
                 </div>
             </section>
-            <!-- -------------- ABOUT BOX ---------------- -->
+            <!-- -------------- skills ---------------- -->
             <section class="section" id="about">
                 <div class="top-header">
                     <h1>My Tech Stack</h1>
