--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -93,17 +93,20 @@
                   <div class="name"> 
                     <h2>About Me</h2>
                     <p class="aboutme">
-                        I'm a talented full stack developer with a strong passion for backend development. 
+                        I'm a talented full stack developer with a strong passion for backend development. <br>
                          With a deep understanding of server-side technologies and framework.<br>
-                         I specializes in architecting robust and scalable backend systems.
+                         I specialize in architecting robust and scalable backend systems.<br>
                          From designing databases to implementing complex business logic, <br>
-                         I excels in crafting efficient solutions that power the core functionality of web applications.
-                         With a keen eye for optimization and a commitment to delivering high-quality code.
+                         I excels in crafting efficient solutions that power the core functionality of web applications.<br>
                          I'm always eager to tackle new challenges.
                        </p>
 
                        <h2 class="heading" >Mission</h2>
-                       <p class="aboutme">To leverage cutting-edge technology and innovative solutions to develop software that empowers users, enhances efficiency, and enriches experiences. By embracing creativity, collaboration, and continuous learning, I strive to engineer robust, user-centric software that addresses complex challenges, drives business growth, and fosters positive societal impact</p>
+                       <p class="aboutme">To leverage cutting-edge technology and innovative solutions to develop software that empowers users,<br>
+                         enhances efficiency, and enriches experiences.<br>
+                         By embracing creativity, collaboration, and continuous learning, <br>
+                         I strive to engineer robust, user-centric software that addresses complex challenges,<br>
+                         drives business growth, and fosters positive societal impact</p>
                     </div>
                     </div>
                   </div>
