--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -219,14 +219,14 @@
                 <div class="pro">
                     <div class="card1">
                         <div >
-                            <img src="DSC_1202.jpg" class="card1__img">
+                            <img src="employee.png" class="card1__img">
                         </div>
                         <div class="card1__descr-wrapper">
                           <p class="card1__title">
-                          Project
+                          Employee Management System
                         </p>
                         <p class="card1__descr">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque blanditiis nemo fugit autem possimus, magnam consequatur sint esse.
+                          A desktop application that helps to effectively manage employees. Created using python tkinter library.
                         </p>
                         <div class="card1__links">
                           <div>
