--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 </div>
                     
                     <div>
-                        <form class="form" id="emailForm">
+                        <form class="form" onsubmit="sendEmail(); reset(); return false;">
     
                         <div class="flex">
                             <label>
