--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="portfolio.css">
     <script src="portfolio.js"></script>
-   
+    <link href="https://unpkg.com/grapesjs/dist/css/grapes.min.css" rel="stylesheet">
+  
 </head>
 <body>
     <div class="container">
@@ -417,6 +418,8 @@
     <!-- ----- MAIN JS ----- -->
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
+    <script src="https://unpkg.com/grapesjs"></script>
+
 </body>
 
 </html>
